--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,8 +8,10 @@
   .top-bar {
     display: flex;
     color: #fff;
+    padding: 0 40px;
     .logo-wrapper{
-        padding: 20px 16px 20px 40px;
+        // padding: 20px 16px 20px 40px;
+        padding: 20px 16px 20px 0;
         width: 240px;
         display: flex;
         align-items: center;
@@ -30,6 +32,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        flex: 1;
         .title-component{
             display: flex;
             align-items: center;
@@ -48,6 +51,50 @@
         .actions-component{
             display: flex;
             align-items: center;
+            .search-bar-component{
+                display: flex;
+                align-items: center;
+                background: #272727;
+                border-radius: 28px;
+                padding: 8px 16px;
+                width: 280px;
+                input[type=search] {
+                    background: transparent;
+                    border: none;
+                    margin-left: 18px;
+                }
+            }
+            .filter-icon-component{
+                margin: 0 16px;
+            }
+            .notification-icon-component{
+                background: #6E56E0;
+                width: 40px;
+                height: 40px;
+                border-radius: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: relative;
+                img {
+                    width: 24px;
+                    height: 24px;
+                    background: #6E56E0;
+                }
+                .unread-notification-indication-light{
+                    width: 8px;
+                    height: 8px;
+                    border-radius: 50%;
+                    background-color: #FFD928;
+                    position: absolute;
+                    top: 8px;
+                    right: 10px;
+                }
+
+            }
+            .account-action-component{
+                margin: 0 0 0 16px;
+            }
         }
     }
 
