--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,13 @@
 * {
-  background-color: #151515;
   font-family: "Urbanist", sans-serif;
   font-optical-sizing: auto;
 }
 
 /*--------------------------------------------Topbar--------------------------------------------*/
+body {
+  background-color: #151515;
+}
+
 .top-bar {
   display: flex;
   color: #fff;
@@ -202,12 +205,122 @@
   font-weight: 700;
   line-height: 125%;
 }
+.page-content .main-content .dashboard-component .component-row {
+  display: flex;
+  gap: 18px;
+}
+.page-content .main-content .dashboard-component .component-row .heatmap-component {
+  background: #1E1E1E;
+  flex: 1;
+  border-radius: 8px;
+  overflow: hidden;
+}
+.page-content .main-content .dashboard-component .component-row .heatmap-component .header-row {
+  background: transparent;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: solid 2px #272727;
+  padding: 10px 16px 10px 24px;
+}
+.page-content .main-content .dashboard-component .component-row .heatmap-component .header-row .component-title {
+  color: #FFF;
+  text-align: center;
+  font-family: Urbanist;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 100%;
+  margin: 0px;
+}
+.page-content .main-content .dashboard-component .component-row .heatmap-component .header-row .drodowns-component {
+  display: flex;
+  align-items: center;
+}
+.page-content .main-content .dashboard-component .component-row .heatmap-component .header-row .drodowns-component select {
+  background-color: transparent;
+  border: none;
+  color: #898989;
+  text-align: center;
+  font-family: Urbanist;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%; /* 15px */
+  text-transform: uppercase;
+}
+.page-content .main-content .dashboard-component .component-row .heatmap-component .header-row .drodowns-component select:active {
+  outline: none;
+}
+.page-content .main-content .dashboard-component .component-row .heatmap-component .week-days-row {
+  padding: 10px 16px 10px 24px;
+  overflow: hidden;
+}
+.page-content .main-content .dashboard-component .component-row .heatmap-component .week-days-row .days-list {
+  display: flex;
+  list-style: none;
+  border: solid 1px #ccc;
+  border-radius: 8px;
+  overflow: hidden;
+  padding: 0px;
+}
+.page-content .main-content .dashboard-component .component-row .heatmap-component .week-days-row .days-list .day-list-item {
+  flex: 1;
+  border-right: solid 1px #ccc;
+  padding: 10px;
+  text-align: center;
+  cursor: pointer;
+}
+.page-content .main-content .dashboard-component .component-row .heatmap-component .week-days-row .days-list .active-day {
+  background: #C33535;
+}
+.page-content .main-content .dashboard-component .component-row .heatmap-component .data-row {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 16px 10px 24px;
+}
+.page-content .main-content .dashboard-component .component-row .heatmap-component .data-row .circular-progress {
+  width: 190px;
+  height: 190px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.page-content .main-content .dashboard-component .component-row .heatmap-component .data-row .circular-progress .inner-circle {
+  position: absolute;
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+}
+.page-content .main-content .dashboard-component .component-row .heatmap-component .data-row .circular-progress .percentage {
+  position: relative;
+  color: #FFF !important;
+  text-align: center;
+  font-family: Urbanist !important;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%; /* 30px */
+  text-transform: capitalize;
+}
+.page-content .main-content .dashboard-component .component-row .most-day-away-component {
+  flex: 1;
+  background: #1E1E1E;
+}
+.page-content .main-content .dashboard-component .component-row .most-day-away-component .header-row {
+  background: transparent;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: solid 2px #272727;
+}
 .page-content .main-content .notifications-component {
   width: 464px;
   min-height: calc(100vh - 100px);
   padding: 0 24px 24px 24px;
   border-left: solid 2px #272727;
   position: absolute;
+  z-index: 1;
+  background-color: #151515;
   right: 0px;
   top: -10px;
 }
